# Hough-Feature-Detection

./: CMakeLists.txt  README
src/: CMakeLists.txt  main.cpp
src/gui/: hough_window.cpp  hough_window.h  hough_window.ui  pic_display_widget.cpp  pic_display_widget.h  pic_edit_widget.cpp  pic_edit_widget.h  pic_edit_widget.ui
